--- a/comb-app/server/.env
+++ b/comb-app/server/.env
@@ -1,4 +1,4 @@
 PORT=5001
-DB=mongodb+srv://admin:admin@projectcluster.z1dmqgj.mongodb.net/upes-login?retryWrites=true&w=majority
+DB=mongodb+srv://admin:admin@cluster0.8axo4fj.mongodb.net/upes-login?retryWrites=true&w=majority
 JWTPRIVATEKEY=abhay@123
 SALT=10
