--- a/comb-app/server/package.json
+++ b/comb-app/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1368.0",
     "axios": "^1.3.5",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
