--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        AWS_REGION = 'ap-south-1'
+        AWS_DEFAULT_REGION = 'ap-south-1'
         ECR_REGISTRY = 'upes-colab'
         DOCKER_COMPOSE_FILE = 'UPES_CONNECT/micro-backend/docker-compose.yml'
         TAG = 'latest'
