--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -21,6 +21,7 @@ pipeline {
                     $class: 'AmazonWebServicesCredentialsBinding',
                     credentialsId: 'AlmostAdminAWS'
                 ]]) {
+                    sh "cd UPES_CONNECT/micro-backend/"
                     sh "ls"
                     sh "docker-compose build"
                     sh "docker tag ${SERVICE_NAME}:${TAG} ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
