--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -21,7 +21,8 @@ pipeline {
                     $class: 'AmazonWebServicesCredentialsBinding',
                     credentialsId: 'AlmostAdminAWS'
                 ]]) {
-                    sh "cd UPES_CONNECT/micro-backend/"
+                    sh "cd UPES_CONNECT"
+                    sh "cd micro-backend"
                     sh "ls"
                     sh "docker-compose build"
                     sh "docker tag ${SERVICE_NAME}:${TAG} ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
