--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -21,13 +21,11 @@ pipeline {
                     $class: 'AmazonWebServicesCredentialsBinding',
                     credentialsId: 'AlmostAdminAWS'
                 ]]) {
-                    sh "cd UPES_CONNECT"
-                    sh "ls"
-                    sh "cd micro-backend"
-                    sh "ls"
-                    sh "docker-compose build"
-                    sh "docker tag ${SERVICE_NAME}:${TAG} ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
-                    sh "docker push ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
+                    dir('UPES_CONNECT/micro-backend/'){
+                        sh "docker-compose build"
+                        sh "docker tag ${SERVICE_NAME}:${TAG} ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
+                        sh "docker push ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
+                    }
                 }
             }
         }
