--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     environment {
         AWS_DEFAULT_REGION = 'ap-south-1'
         ECR_REGISTRY = 'upes-colab'
-        DOCKER_COMPOSE_FILE = 'UPES_CONNECT/micro-backend/docker-compose.yml'
+        DOCKER_COMPOSE_FILE = 'docker-compose.yml'
         TAG = 'latest'
     }
 
@@ -23,7 +23,7 @@ pipeline {
                 ]]) {
                     dir('UPES_CONNECT/micro-backend/'){
                         sh "ls"
-                        sh "docker-compose build"
+                        sh "docker-compose -f ${DOCKER_COMPOSE_PATH} build"
                         sh "docker tag ${SERVICE_NAME}:${TAG} ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
                         sh "docker push ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
                     }
