--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -23,7 +23,7 @@ pipeline {
                 ]]) {
                     dir('UPES_CONNECT/micro-backend/'){
                         sh "ls"
-                        sh "docker-compose -f ${DOCKER_COMPOSE_PATH} build"
+                        sh "docker-compose -f ${DOCKER_COMPOSE_FILE} build"
                         sh "docker tag ${SERVICE_NAME}:${TAG} ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
                         sh "docker push ${ECR_REGISTRY}/${SERVICE_NAME}:${TAG}"
                     }
