--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
 
     environment {
         AWS_DEFAULT_REGION = 'ap-south-1'
-        ECR_REGISTRY = 'upes-colab'
+        ECR_REGISTRY = '373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab'
         DOCKER_COMPOSE_FILE = 'docker-compose.yml'
         SERVICE_NAME = 'micro-backend'
         TAG = 'latest'
@@ -29,7 +29,8 @@ pipeline {
                         sh "docker-compose -f ${DOCKER_COMPOSE_FILE} build"
                         sh "docker tag micro-backend_signupapi:latest 373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:micro-backend_signupapi"
                         sh "docker tag micro-backend_loginapi:latest 373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:micro-backend_loginapi"
-                        sh "aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 373425558498.dkr.ecr.ap-south-1.amazonaws.com"
+                        sh "aws ecr get-login-password --region ${AWS_DEFAULT_REGION} --no-include-email | docker login --username AWS --password-stdin ${ECR_REGISTRY}"
+"
                         sh "docker push 373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:micro-backend_signupapi"
                         sh "docker push 373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:micro-backend_loginapi"
                     }
