--- a/UPES_CONNECT/micro-backend/Jenkinsfile
+++ b/UPES_CONNECT/micro-backend/Jenkinsfile
@@ -25,14 +25,14 @@ pipeline {
                     secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
                 ]]) {
                     dir('UPES_CONNECT/micro-backend/'){
-                        sh 'apt-get update'
-                        sh 'apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common'
-                        sh 'curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -'
-                        sh 'add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"'
-                        sh 'apt-get update'
-                        sh 'apt-get install -y docker-ce docker-ce-cli containerd.io'
-                        sh 'service docker start'
-                        sh "docker-compose -f ${DOCKER_COMPOSE_FILE} build"
+                        sh 'sudo apt-get update'
+                        sh 'sudo apt-get install -y apt-transport-https ca-certificates curl gnupg-agent software-properties-common'
+                        sh 'sudo curl -fsSL https://download.docker.com/linux/debian/gpg | apt-key add -'
+                        sh 'sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/debian $(lsb_release -cs) stable"'
+                        sh 'sudo apt-get update'
+                        sh 'sudo apt-get install -y docker-ce docker-ce-cli containerd.io'
+                        sh 'sudo service docker start'
+                        sh 'sudo docker-compose -f docker-compose.yml build'
                         sh "docker tag micro-backend_signupapi:latest 373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:micro-backend-signupapi"
                         sh "docker tag micro-backend_loginapi:latest 373425558498.dkr.ecr.ap-south-1.amazonaws.com/upes-colab:micro-backend-loginapi"
                         sh "aws ecr get-login-password --region ${AWS_DEFAULT_REGION} | docker login --username AWS --password-stdin ${ECR_REGISTRY}"
