--- a/UPES_CONNECT/frontend/Jenkinsfile
+++ b/UPES_CONNECT/frontend/Jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
         // Checkout your React project from version control
         checkout scm
         
+        dir('UPES_CONNECT/frontend/')
         // Install project dependencies
         sh 'npm install'
         
