--- a/UPES_CONNECT/frontend/Jenkinsfile
+++ b/UPES_CONNECT/frontend/Jenkinsfile
@@ -25,12 +25,8 @@ pipeline {
             accessKeyVariable: 'AWS_ACCESS_KEY_ID',
             secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
         ]]) {
-            // Configure AWS CLI credentials using the Jenkins AWS credentials plugin
-            sh 'aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID'
-            sh 'aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY'
-            
             // Upload the build artifacts to S3
-            sh 'aws s3 sync build/ s3://upes-colab'
+            sh 'aws s3 sync UPES_CONNECT/frontend/build/ s3://upes-colab'
         }
       }
     }
