--- a/UPES_CONNECT/frontend/Jenkinsfile
+++ b/UPES_CONNECT/frontend/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline {
             secretKeyVariable: 'AWS_SECRET_ACCESS_KEY'
         ]]) {
             // Upload the build artifacts to S3
-            sh 'aws s3 sync UPES_CONNECT/frontend/build/ s3://upes-colab'
+            sh 'aws s3 sync --acl public-read UPES_CONNECT/frontend/build/ s3://upes-colab'
         }
       }
     }
