--- a/UPES_CONNECT/micro-backend/docker-compose.yml
+++ b/UPES_CONNECT/micro-backend/docker-compose.yml
@@ -3,37 +3,17 @@ services:
   signupapi:
     build:
       context: ./signupapi
-    #   args:
-    #     AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-    #     AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-    #     AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
-      
-    # env_file:
-    #   - .env
-      
-    # environment:
-    #   - NODE_ENV=production
-    #   - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-    #   - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-    #   - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
     ports:
       - "5001:5001"
 
   loginapi:
     build:
       context: ./loginapi
-    #   args:
-    #     AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
-    #     AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-    #     AWS_DEFAULT_REGION: ${AWS_DEFAULT_REGION}
-      
-    # env_file:
-    #   - .env
-      
-    # environment:
-    #   - NODE_ENV=production
-    #   - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-    #   - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-    #   - AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION}
     ports:
       - "5002:5002"
+
+  server:
+    build:
+      context: ./server
+    ports:
+      - "3001:3001"
